# amazonia-360

./: .env.default  .env.test  .env.webshot.default  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  audit-ci.json  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  splitenv.mjs  tsconfig.json
.github/: cicd.yml
.github/workflows/: cicd v2.yml  cicd.yml  client-e2e-tests.yml  client-tests.yml  client-unit-tests.yml  dependency-scan.yml  webshot-tests.yml
.playwright-mcp/: page-2026-04-08T19-56-55-382Z.yml
api/: .dockerignore  .env.default  Dockerfile  README.md  main.py  package.json  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
api/app/: main.py
api/app/auth/: auth.py
api/app/config/: config.py
api/app/models/: exact_extract.py  grid.py
api/app/modules/auth/: auth.py
api/app/modules/geo/: zonal_stats.py
api/app/routers/: grid.py  h3.py  zonal_stats.py
api/config/: config.py
api/database/: database.py  repository.py
api/scripts/: csv_to_tiles.py  grid_table_geometry.py  h3_csv_to_arrow_tiles.py  update_grid.py
api/src/app/: config.py  dependencies.py  errors.py  main.py  openai_service.py
api/src/app/auth/: auth.py
api/src/app/config/: config.py
api/src/app/models/: grid.py
api/src/app/repository/: grid.py
api/src/app/routers/: grid.py  text_generation.py  zonal_stats.py
api/tests/: benchmark_grid_post.lua  benchmark_table_post.lua  conftest.py  test_grid.py  test_main.py  test_openai_service.py  test_zonal_stats.py  utils.py
api/tests/models/: test_grid.py
api/tests/test_app/: test_grid.py  test_main.py  test_openai_service.py
api/tests/test_scripts/: test_csv_to_tiles.py
client/: .env.default  .env.test  .gitignore  .prettierrc  .pretttier.js  Dockerfile  README.md  architecture-diagram.md  entrypoint.sh  eslint.config.mjs  jest.config.ts  jest.setup.ts  next.config.mjs  orval.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vitest.config.mts
client/.husky/: pre-commit
client/datum/: indicators.json  subtopics.json  topics.json
client/e2e/: auth.setup.ts  forgot-password.spec.ts  report-creation.auth.spec.ts  report-creation.spec.ts  reports-id.auth.spec.ts  reports-id.spec.ts  reports.auth.spec.ts  reports.spec.ts  sign-in.spec.ts  sign-up.spec.ts  smoke.spec.ts  tsconfig.json
client/e2e/fixtures/: base.ts  index.ts
client/src/: env.mjs  jest.setup.ts  jest.utils.tsx  middleware.ts  payload-types.ts  payload.config.ts  proxy.ts  test.utils.tsx  vitest.setup.ts
database/: Dockerfile  entrypoint.sh
infrastructure/: .terraform.lock.hcl  README.md  SES_QUICK_TEST.md  main.tf  outputs.tf  providers.tf  variables.tf
infrastructure/v1/: variables.tf
infrastructure/v2/: .terraform.lock.hcl  README.md  main.tf  providers.tf  variables.tf
infrastructure/vars/: terraform.tfvars
load_tests/: DEVELOPMENT.md  README.md  config.py  examples.py  locustfile.py  pyproject.toml
load_tests/request_specs/: README.md  __init__.py  base.py  example_parametric.py.example  grid_tile.py  grid_tile_for_aoi.py  indicators.py  meta.py  report.py  results.py
load_tests/request_specs/tiles/: tiles.py  var_names.py
load_tests/src/load_testing/: __init__.py
science/: README.md  docker-compose.yml  environment.yml  pyproject.toml  requirements.in  requirements.txt
science/notebooks/: 01_report_queries.ipynb  AI_recomendation_test.ipynb  _template.ipynb  add_colormaps_to_cogs.ipynb  check_combine_results.ipynb  compute_amazonia_coverage_per_country.py  debugg_exactextract.ipynb  fix_population.ipynb  grid_table_geometry.ipynb  merge_entrega_roberto.ipynb
science/src/: app.py  combine_tiles.py  main.py  raster_to_tiles.py  renames_and_cogs.sh  to_tile_files.py
science/src/api/: config.py  main.py
science/src/api/helpers/: data_transform.py
science/src/api/models/: arcgis.py  titiler.py
science/src/api/routers/: arcgis.py  context_data.py  description.py
science/src/api/services/: arcgis_service.py  openai_service.py  titiler_service.py
science/src/apis/: context_data.py  description.py  utils.py
science/src/app/: config.py  main.py
science/src/app/components/: map.py  sidebar.py
science/src/app/helpers/: map.py  transform.py
science/src/app/models/: description.py  profile.py
science/src/app/services/: arcgis.py  context_data.py  description.py
science/src/app/utils/: validation.py
science/src/app_recomendator/: agent.py  indicators_list.py  main copy.py  main.py
science/src/helpers/: map.py
scripts/: splitenv.mts  splitenv.test.mts
webshot/: Dockerfile  README.md  entrypoint.sh  eslint.config.mjs  nest-cli.json  package.json  pnpm-lock.yaml  tsconfig.build.json  tsconfig.json  tsconfig.spec.json  tsconfig.tsbuildinfo  vitest.config-e2e.ts  vitest.config.ts
webshot/config/: custom-environment-variables.json  default.json
webshot/src/: app.module.ts  global-exception.filter.ts  main.ts
webshot/test/: report.service.spec.ts
(+984 files in other folders)
