[project]
name = "amazonia-360-science"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "geopandas>=1.1.1",
    "langchain>=1.0.7",
    "langchain-openai>=1.0.3",
    "pandas>=2.3.2",
    "streamlit>=1.51.0",
]

[tool.ruff]
line-length = 100
extend-include = ["*.ipynb"]
src = ["src"]

[tool.ruff.lint]
select = [
    "D1",   # pydocstyle errors
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # flake8
    "C",    # flake8-comprehensions
    "B",    # flake8-bugbear
    "N",    # Naming conventions
    "I",    # isort
]
ignore = [
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in __init__
    "C901", # Too complex
]

[tool.ruff.lint.per-file-ignores]
"**/{tests}/*" = ["D103"]  # Missing docstring in public function
